--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,32 @@
   "name": "Norwegian word translator",
   "description": "Chrome extension for Norwegian learners. Just double-click on a word you want to translate",
   "version": "0.0.1",
-
   "browser_action": {
     "default_popup": "index.html",
     "default_title": "Open the popup"
   },
-  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'", 
+  "content_scripts": [
+    {
+      "js": [
+        "content.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
+  "content_security_policy": "script-src 'self' 'sha256-xjVNmPNhb7UXrF4Ak8nUU4WtQdDMsnDmV0ByoIg27L4='; object-src 'self'",
   "permissions": [
+    "contextMenus",
+    "tabs"
+  ],
+  "web_accessible_resources": [
+    "*.html"
   ]
 }
