--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,15 @@
 {
-  "manifest_version": 2,
-  "name": "Norwegian word translator",
-  "description": "Chrome extension for Norwegian learners. Just double-click on a word you want to translate",
-  "version": "0.0.1",
-  "browser_action": {
-    "default_popup": "index.html",
-    "default_title": "Open the popup"
-  },
-  "content_scripts": [
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
     {
-      "js": [
-        "content.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
-  "content_security_policy": "script-src 'self' 'sha256-xjVNmPNhb7UXrF4Ak8nUU4WtQdDMsnDmV0ByoIg27L4='; object-src 'self'",
-  "permissions": [
-    "contextMenus",
-    "tabs"
-  ],
-  "web_accessible_resources": [
-    "*.html"
-  ]
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
